убрал обёртку для блоков показать более, логика поиска в модалках на data-value

--- a/src/create-tender.html
+++ b/src/create-tender.html
@@ -506,86 +506,86 @@
                         <div class="choose-list">
                             <div class="mb-2 location-checkbox-wrap">
                                 <label class="location-checkbox">
-                                    <input type="checkbox" name="check-one" value="Ростов на Дону" class="location-checkbox__input">
+                                    <input type="checkbox" name="check-one" data-value="Ростов на Дону" value="Ростов на Дону" class="location-checkbox__input">
                                     <p class="location-checkbox__text">Ростов на Дону</p>
                                 </label>
                             </div>
                             <div class="mb-2 location-checkbox-wrap">
                                 <label class="location-checkbox">
-                                    <input type="checkbox" name="check-one" value="Санкт - Петербург" class="location-checkbox__input">
+                                    <input type="checkbox" name="check-one" data-value="Санкт - Петербург" value="Санкт - Петербург" class="location-checkbox__input">
                                     <p class="location-checkbox__text">Санкт - Петербург</p>
                                 </label>
                             </div>
                             <div class="mb-2 location-checkbox-wrap">
                                 <label class="location-checkbox">
-                                    <input type="checkbox" name="check-one" value="Актау и Мангистау" class="location-checkbox__input">
+                                    <input type="checkbox" name="check-one" data-value="Актау и Мангистау" value="Актау и Мангистау" class="location-checkbox__input">
                                     <p class="location-checkbox__text">Актау и Мангистау</p>
                                 </label>
                             </div>
                             <div class="mb-2 location-checkbox-wrap">
                                 <label class="location-checkbox">
-                                    <input type="checkbox" name="check-one" value="Алматы" class="location-checkbox__input">
+                                    <input type="checkbox" name="check-one" value="Алматы" data-value="Алматы" class="location-checkbox__input">
                                     <p class="location-checkbox__text">Алматы</p>
                                 </label>
                             </div>
                             <div class="mb-2 location-checkbox-wrap">
                                 <label class="location-checkbox">
-                                    <input type="checkbox" name="check-one" value="Архангельск" class="location-checkbox__input">
+                                    <input type="checkbox" name="check-one" data-value="Архангельск" value="Архангельск" class="location-checkbox__input">
                                     <p class="location-checkbox__text">Архангельск
                                     </p>
                                 </label>
                             </div>
                             <div class="mb-2 location-checkbox-wrap">
                                 <label class="location-checkbox">
-                                    <input type="checkbox" name="check-one" value="Астана" class="location-checkbox__input">
+                                    <input type="checkbox" name="check-one" data-value="Астана" value="Астана" class="location-checkbox__input">
                                     <p class="location-checkbox__text">Астана</p>
                                 </label>
                             </div>
                             <div class="mb-2 location-checkbox-wrap">
                                 <label class="location-checkbox">
-                                    <input type="checkbox" name="check-one" value="Астрахань и область" class="location-checkbox__input">
+                                    <input type="checkbox" name="check-one" data-value="Астрахань и область" value="Астрахань и область" class="location-checkbox__input">
                                     <p class="location-checkbox__text">Астрахань и область</p>
                                 </label>
                             </div>
                             <div class="mb-2 location-checkbox-wrap">
                                 <label class="location-checkbox">
-                                    <input type="checkbox" name="check-one" value="Владикавказ и область" class="location-checkbox__input">
+                                    <input type="checkbox" name="check-one" data-value="Владикавказ и область" value="Владикавказ и область" class="location-checkbox__input">
                                     <p class="location-checkbox__text">Владикавказ и область</p>
                                 </label>
                             </div>
                             <div class="mb-2 location-checkbox-wrap">
                                 <label class="location-checkbox">
-                                    <input type="checkbox" name="check-one" value="Владимир" class="location-checkbox__input">
+                                    <input type="checkbox" name="check-one" data-value="Владимир" value="Владимир" class="location-checkbox__input">
                                     <p class="location-checkbox__text">Владимир</p>
                                 </label>
                             </div>
                             <div class="mb-2 location-checkbox-wrap">
                                 <label class="location-checkbox">
-                                    <input type="checkbox" name="check-one" value="Волгоград" class="location-checkbox__input">
+                                    <input type="checkbox" name="check-one" data-value="Волгоград" value="Волгоград" class="location-checkbox__input">
                                     <p class="location-checkbox__text">Волгоград</p>
                                 </label>
                             </div>
                             <div class="mb-2 location-checkbox-wrap">
                                 <label class="location-checkbox">
-                                    <input type="checkbox" name="check-one" value="Москва" class="location-checkbox__input">
+                                    <input type="checkbox" name="check-one" data-value="Москва" value="Москва" class="location-checkbox__input">
                                     <p class="location-checkbox__text">Москва</p>
                                 </label>
                             </div>
                             <div class="mb-2 location-checkbox-wrap">
                                 <label class="location-checkbox">
-                                    <input type="checkbox" name="check-one" value="Санкт - Петербург" class="location-checkbox__input">
+                                    <input type="checkbox" name="check-one" data-value="Санкт - Петербург" value="Санкт - Петербург" class="location-checkbox__input">
                                     <p class="location-checkbox__text">Санкт - Петербург</p>
                                 </label>
                             </div>
                             <div class="mb-2 location-checkbox-wrap">
                                 <label class="location-checkbox">
-                                    <input type="checkbox" name="check-one" value="Актау и Мангистау" class="location-checkbox__input">
+                                    <input type="checkbox" name="check-one" data-value="Актау и Мангистау" value="Актау и Мангистау" class="location-checkbox__input">
                                     <p class="location-checkbox__text">Актау и Мангистау</p>
                                 </label>
                             </div>
                             <div class="mb-2 location-checkbox-wrap">
                                 <label class="location-checkbox">
-                                    <input type="checkbox" name="check-one" value="Алматы" class="location-checkbox__input">
+                                    <input type="checkbox" name="check-one" data-value="Алматы" value="Алматы" class="location-checkbox__input">
                                     <p class="location-checkbox__text">Алматы</p>
                                 </label>
                             </div>
