Revert "убрал обёртку для блоков показать более, логика поиска в модалках на data-value"
This reverts commit 7db40a56029831bf55bd325aed59ecfc56ae21d5.

--- a/src/ceni-postavshikov.html
+++ b/src/ceni-postavshikov.html
@@ -324,22 +324,31 @@
                                     </label>
                                 </div>
                                 <div class="filter-collapse__row">
-                                    <label>
-                                        <input type="checkbox" name="check-one" value="check-one" />
-                                        <span class="text">М-100 <span class="grey">(24)</span></span>
-                                    </label>
+                                    <a href="" class="link js-filter-show-more">
+                                        <span>Показать все</span>
+                                        <img src="img/icons/arrow-blue-small.svg" alt="">
+                                    </a>
                                 </div>
-                                <div class="filter-collapse__row">
-                                    <label>
-                                        <input type="checkbox" name="check-one" value="check-one" />
-                                        <span class="text">М-100 <span class="grey">(24)</span></span>
-                                    </label>
+                                <div class="filter-collapse__box">
+                                    <div class="filter-collapse__row">
+                                        <label>
+                                            <input type="checkbox" name="check-one" value="check-one" />
+                                            <span class="text">М-100 <span class="grey">(24)</span></span>
+                                        </label>
+                                    </div>
+                                    <div class="filter-collapse__row">
+                                        <label>
+                                            <input type="checkbox" name="check-one" value="check-one" />
+                                            <span class="text">М-100 <span class="grey">(24)</span></span>
+                                        </label>
+                                    </div>
+                                    <div class="filter-collapse__row">
+                                        <label>
+                                            <input type="checkbox" name="check-one" value="check-one" />
+                                            <span class="text">М-100 <span class="grey">(24)</span></span>
+                                        </label>
+                                    </div>
                                 </div>
-                                <a href="" class="link js-filter-show-more filter-collapse__toggler">
-                                    <span class="filter-collapse__toggler-show">Показать все</span>
-                                    <span class="filter-collapse__toggler-hide">Свернуть</span>
-                                    <img src="img/icons/arrow-blue-small.svg" alt="">
-                                </a>
                             </div>
                         </div>
                         <div class="filter-collapse">
