--- a/src/add-announcement.html
+++ b/src/add-announcement.html
@@ -235,34 +235,49 @@
                                 </div>
 
                                 <div class="filter-collapse__row">
-                                    <input type="radio" id="test1" name="radio-group" class="category-radio" data-value="Балка" value="Балка">
+                                    <input type="radio" id="test1" name="radio-group" class="category-radio" value="Балка">
                                     <label for="test1">Балка <span class="grey">(24)</span></label>
                                 </div>
                                 <div class="filter-collapse__row">
-                                    <input type="radio" id="test2" name="radio-group" class="category-radio" data-value="Ограждения" value="Ограждения">
+                                    <input type="radio" id="test2" name="radio-group" class="category-radio" value="Ограждения">
                                     <label for="test2">Ограждения <span class="grey">(24)</span></label>
                                 </div>
                                 <div class="filter-collapse__row">
-                                    <input type="radio" id="test3" name="radio-group" class="category-radio" data-value="Плиты" value="Плиты">
+                                    <input type="radio" id="test3" name="radio-group" class="category-radio" value="Плиты">
                                     <label for="test3">Плиты <span class="grey">(24)</span></label>
                                 </div>
                                 <div class="filter-collapse__row">
-                                    <input type="radio" id="test4" name="radio-group" class="category-radio" data-value="Кабельные каналы" value="Кабельные каналы">
+                                    <input type="radio" id="test4" name="radio-group" class="category-radio" value="Кабельные каналы">
                                     <label for="test4">Кабельные каналы <span class="grey">(24)</span></label>
                                 </div>
                                 <div class="filter-collapse__row">
-                                    <input type="radio" id="test5" name="radio-group" class="category-radio" data-value="Блок" value="Блок">
+                                    <input type="radio" id="test5" name="radio-group" class="category-radio" value="Блок">
                                     <label for="test5">Блок <span class="grey">(24)</span></label>
                                 </div>
                                 <div class="filter-collapse__row">
-                                    <input type="radio" id="test6" name="radio-group" class="category-radio" data-value="Бортовой камень" value="Бортовой камень">
+                                    <input type="radio" id="test6" name="radio-group" class="category-radio" value="Бортовой камень">
                                     <label for="test6">Бортовой камень <span class="grey">(24)</span></label>
                                 </div>
-                                <a href="" class="link js-filter-show-more filter-collapse__toggler">
-                                    <span class="filter-collapse__toggler-show">Показать все</span>
-                                    <span class="filter-collapse__toggler-hide">Свернуть</span>
-                                    <img src="img/icons/arrow-blue-small.svg" alt="">
-                                </a>
+                                <div class="filter-collapse__row">
+                                    <a href="" class="link js-filter-show-more">
+                                        <span>Показать все</span>
+                                        <img src="img/icons/arrow-blue-small.svg" alt="">
+                                    </a>
+                                </div>
+                                <div class="filter-collapse__box">
+                                    <div class="filter-collapse__row">
+                                        <input type="radio" id="test7" name="radio-group" class="category-radio" value="М-450">
+                                        <label for="test7">М-450 <span class="grey">(24)</span></label>
+                                    </div>
+                                    <div class="filter-collapse__row">
+                                        <input type="radio" id="test8" name="radio-group" class="category-radio" value="М-550">
+                                        <label for="test8">М-550 <span class="grey">(24)</span></label>
+                                    </div>
+                                    <div class="filter-collapse__row">
+                                        <input type="radio" id="test9" name="radio-group" class="category-radio" value="М-650">
+                                        <label for="test9">М-650 <span class="grey">(24)</span></label>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <div class="filter-collapse">
@@ -280,34 +295,49 @@
                                 </div>
 
                                 <div class="filter-collapse__row">
-                                    <input type="radio" id="test21" name="radio-group2" class="category-radio" data-value="Балка" value="Балка">
+                                    <input type="radio" id="test21" name="radio-group2" class="category-radio" value="Балка">
                                     <label for="test21">Балка <span class="grey">(24)</span></label>
                                 </div>
                                 <div class="filter-collapse__row">
-                                    <input type="radio" id="test22" name="radio-group2" class="category-radio" data-value="Ограждения" value="Ограждения">
+                                    <input type="radio" id="test22" name="radio-group2" class="category-radio" value="Ограждения">
                                     <label for="test22">Ограждения <span class="grey">(24)</span></label>
                                 </div>
                                 <div class="filter-collapse__row">
-                                    <input type="radio" id="test23" name="radio-group2" class="category-radio" data-value="Плиты" value="Плиты">
+                                    <input type="radio" id="test23" name="radio-group2" class="category-radio" value="Плиты">
                                     <label for="test23">Плиты <span class="grey">(24)</span></label>
                                 </div>
                                 <div class="filter-collapse__row">
-                                    <input type="radio" id="test24" name="radio-group2" class="category-radio" data-value="Кабельные каналы" value="Кабельные каналы">
+                                    <input type="radio" id="test24" name="radio-group2" class="category-radio" value="Кабельные каналы">
                                     <label for="test24">Кабельные каналы <span class="grey">(24)</span></label>
                                 </div>
                                 <div class="filter-collapse__row">
-                                    <input type="radio" id="test25" name="radio-group2" class="category-radio" data-value="Кабельные каналы" value="Кабельные каналы">
+                                    <input type="radio" id="test25" name="radio-group2" class="category-radio" value="Кабельные каналы">
                                     <label for="test25">Блок <span class="grey">(24)</span></label>
                                 </div>
                                 <div class="filter-collapse__row">
-                                    <input type="radio" id="test26" name="radio-group2" class="category-radio" data-value="Бортовой камень" value="Бортовой камень">
+                                    <input type="radio" id="test26" name="radio-group2" class="category-radio" value="Бортовой камень">
                                     <label for="test26">Бортовой камень <span class="grey">(24)</span></label>
                                 </div>
-                                <a href="" class="link js-filter-show-more filter-collapse__toggler">
-                                    <span class="filter-collapse__toggler-show">Показать все</span>
-                                    <span class="filter-collapse__toggler-hide">Свернуть</span>
-                                    <img src="img/icons/arrow-blue-small.svg" alt="">
-                                </a>
+                                <div class="filter-collapse__row">
+                                    <a href="" class="link js-filter-show-more">
+                                        <span>Показать все</span>
+                                        <img src="img/icons/arrow-blue-small.svg" alt="">
+                                    </a>
+                                </div>
+                                <div class="filter-collapse__box">
+                                    <div class="filter-collapse__row">
+                                        <input type="radio" id="test27" name="radio-group2" class="category-radio" value="М-450">
+                                        <label for="test27">М-450 <span class="grey">(24)</span></label>
+                                    </div>
+                                    <div class="filter-collapse__row">
+                                        <input type="radio" id="test28" name="radio-group2" class="category-radio" value="М-550">
+                                        <label for="test28">М-550 <span class="grey">(24)</span></label>
+                                    </div>
+                                    <div class="filter-collapse__row">
+                                        <input type="radio" id="test29" name="radio-group2" class="category-radio" value="М-650">
+                                        <label for="test29">М-650 <span class="grey">(24)</span></label>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <div class="filter-collapse">
@@ -325,34 +355,49 @@
                                 </div>
 
                                 <div class="filter-collapse__row">
-                                    <input type="radio" id="test31" name="radio-group2" class="category-radio" data-value="Балка" value="Балка">
+                                    <input type="radio" id="test31" name="radio-group2" class="category-radio" value="Балка">
                                     <label for="test31">Балка <span class="grey">(24)</span></label>
                                 </div>
                                 <div class="filter-collapse__row">
-                                    <input type="radio" id="test32" name="radio-group2" class="category-radio" data-value="Ограждения" value="Ограждения">
+                                    <input type="radio" id="test32" name="radio-group2" class="category-radio" value="Ограждения">
                                     <label for="test32">Ограждения <span class="grey">(24)</span></label>
                                 </div>
                                 <div class="filter-collapse__row">
-                                    <input type="radio" id="test33" name="radio-group2" class="category-radio" data-value="Плиты" value="Плиты">
+                                    <input type="radio" id="test33" name="radio-group2" class="category-radio" value="Плиты">
                                     <label for="test33">Плиты <span class="grey">(24)</span></label>
                                 </div>
                                 <div class="filter-collapse__row">
-                                    <input type="radio" id="test34" name="radio-group2" class="category-radio" data-value="Кабельные каналы" value="Кабельные каналы">
+                                    <input type="radio" id="test34" name="radio-group2" class="category-radio" value="Кабельные каналы">
                                     <label for="test34">Кабельные каналы <span class="grey">(24)</span></label>
                                 </div>
                                 <div class="filter-collapse__row">
-                                    <input type="radio" id="test35" name="radio-group2" class="category-radio" data-value="Кабельные каналы" value="Кабельные каналы">
+                                    <input type="radio" id="test35" name="radio-group2" class="category-radio" value="Кабельные каналы">
                                     <label for="test35">Блок <span class="grey">(24)</span></label>
                                 </div>
                                 <div class="filter-collapse__row">
-                                    <input type="radio" id="test36" name="radio-group2" class="category-radio" data-value="Бортовой камень" value="Бортовой камень">
+                                    <input type="radio" id="test36" name="radio-group2" class="category-radio" value="Бортовой камень">
                                     <label for="test36">Бортовой камень <span class="grey">(24)</span></label>
                                 </div>
-                                <a href="" class="link js-filter-show-more filter-collapse__toggler">
-                                    <span class="filter-collapse__toggler-show">Показать все</span>
-                                    <span class="filter-collapse__toggler-hide">Свернуть</span>
-                                    <img src="img/icons/arrow-blue-small.svg" alt="">
-                                </a>
+                                <div class="filter-collapse__row">
+                                    <a href="" class="link js-filter-show-more">
+                                        <span>Показать все</span>
+                                        <img src="img/icons/arrow-blue-small.svg" alt="">
+                                    </a>
+                                </div>
+                                <div class="filter-collapse__box">
+                                    <div class="filter-collapse__row">
+                                        <input type="radio" id="test37" name="radio-group2" class="category-radio" value="М-450">
+                                        <label for="test37">М-450 <span class="grey">(24)</span></label>
+                                    </div>
+                                    <div class="filter-collapse__row">
+                                        <input type="radio" id="test38" name="radio-group2" class="category-radio" value="М-550">
+                                        <label for="test38">М-550 <span class="grey">(24)</span></label>
+                                    </div>
+                                    <div class="filter-collapse__row">
+                                        <input type="radio" id="test39" name="radio-group2" class="category-radio" value="М-650">
+                                        <label for="test39">М-650 <span class="grey">(24)</span></label>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
