--- a/src/services.html
+++ b/src/services.html
@@ -258,8 +258,11 @@
     </ul>
 </footer>
 
-<div id="header-menu" class="header-menu mfp-with-anim mfp-hide">
+<div id="header-menu" class="header-menu">
     <div class="header-menu__content">
+        <div class="header-menu__close">
+            <img src="img/icons/close.svg" alt="">
+        </div>
         <ul class="header-menu__list">
             <li class="header-menu__item">
                 <a href="" class="header-menu__link link dark">Объявления</a>
