--- a/src/add-proposal-purchase.html
+++ b/src/add-proposal-purchase.html
@@ -205,7 +205,7 @@
         </label>
         <label class="materil-group mb-4">
             <span class="materil-group__label">Телефон <span class="red">*</span></span>
-            <input type="tel" class="form-control base-input materil-group__input">
+            <input type="tel" class="form-control base-input materil-group__input phone-input">
         </label>
         <a href="javascript:void(0)" class="materil-group mb-4" data-toggle="modal" data-target="#choose-location">
             <span class="materil-group__label">В каких регионах разместить тендер<span class="red">*</span></span>
