--- a/src/ceni-postavshikov-card.html
+++ b/src/ceni-postavshikov-card.html
@@ -98,8 +98,9 @@
                 </span>
             </strong></p>
             <p class="sm pb-2 pt-2 border-bottom">Москва</p>
-            <p class="sm pb-2 mb-3 pt-2 blue border-bottom">
-                <a href="">+ 7 Показать номер</a>
+            <p class="sm pb-2 mb-3 pt-2 blue border-bottom phone-btn js-show-phone">
+                <span class="phone-btn__text">+ 7 Показать номер</span>
+                <span class="phone-btn__number">+ 7 213 43 434</span>
             </p>
             <p class="sm grey mb-32">
                 Опубликовано:
