--- a/src/personal-information.html
+++ b/src/personal-information.html
@@ -81,7 +81,7 @@
         </label>
         <label class="materil-group personal-information-input">
             <span class="materil-group__label">Телефон*</span>
-            <input type="text" class="form-control base-input materil-group__input lg">
+            <input type="text" class="form-control base-input materil-group__input lg phone-input">
         </label>
         <div class="personal-information__btn">
             <div class="row">
