--- a/src/registration.html
+++ b/src/registration.html
@@ -52,7 +52,7 @@
                     </label>
                     <label class="materil-group personal-information-input">
                         <span class="materil-group__label">Телефон</span>
-                        <input type="text" class="form-control base-input materil-group__input lg">
+                        <input type="text" class="form-control base-input materil-group__input lg phone-input">
                     </label>
                     <label class="mb-4 d-block">
                         <input type="checkbox" name="check-one" value="check-one" />
@@ -93,7 +93,7 @@
                     </label>
                     <label class="materil-group personal-information-input">
                         <span class="materil-group__label">Телефон</span>
-                        <input type="text" class="form-control base-input materil-group__input lg">
+                        <input type="text" class="form-control base-input materil-group__input lg phone-input">
                     </label>
                     <label class="materil-group personal-information-input">
                         <span class="materil-group__label">Ваша организация*</span>
@@ -101,7 +101,7 @@
                     </label>
                     <label class="materil-group personal-information-input">
                         <span class="materil-group__label">Телефон для связи*</span>
-                        <input type="text" class="form-control base-input materil-group__input lg">
+                        <input type="text" class="form-control base-input materil-group__input lg phone-input">
                     </label>
                     <label class="materil-group personal-information-input">
                         <span class="materil-group__label">Почта для связи*</span>
